# DataPipelinesTutorial-Pybr2025

./: README.md  setup.py
.github/workflows/: ci.yml  main.yml
coffee_sales_pipeline/: README.md  main.py  pyproject.toml
coffee_sales_pipeline/src/: pipeline_runner.py
coffee_sales_pipeline/src/data/: read_coffee_sales.py
coffee_sales_pipeline/src/data/filter/: coffee_sales_filter.csv
coffee_sales_pipeline/src/data/processed/: coffee_sales_summary.csv
coffee_sales_pipeline/src/pipeline/: extract.py  load.py  transform.py  validate.py
coffee_sales_pipeline/src/streamlit/: streamlit_app.py
streamlit/: streamlit_app.py
tests/: test_dataframe_hours.py  test_validate.py
