[project]
name = "coffee-sales-pipeline"
version = "0.1.0"
description = "Projeto para tutorial do curso de Data Pipelines da Python Brasil 2025"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "great-expectations>=1.7.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "streamlit>=1.50.0",
]
